# dirmove

./: .gitignore  README.md  pyproject.toml
dirmove/: main.py
