[tool.poetry]
name = "dirmove"
version = "0.1.0"
description = "dirmove"
authors = ["YAMASHITA Yuta <proyuuta0618188188@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
